# duip

./: .flaskenv  README.md  dev.sh  pyproject.toml  setup.cfg
src/duip/: __init__.py  command.py  node.py
src/duip/model/: __init__.py
src/duip/node/: __init__.py  routes.py
tests/: conftest.py  test_commands.py  test_duip.py  test_model.py  test_nodes.py
