[tool.poetry]
name = "duip"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
include='\.pyi?$|/SConscript$|/libtbx_config$'

[tool.towncrier]
package = "duip"
package_dir = ".."
filename = "CHANGELOG.rst"

[tool.isort]
known_cctbx="boost,boost_adaptbx,cbflib_adaptbx,cctbx,chiltbx,clipper_adaptbx,cma_es,cootbx,crys3d,cudatbx,fable,fast_linalg,fftw3tbx,gltbx,iota,iotbx,libtbx,mmtbx,omptbx,prime,rstbx,scitbx,simtbx,smtbx,spotfinder,tbxx,ucif,wxtbx,xfel"
sections="FUTURE,STDLIB,THIRDPARTY,CCTBX,FIRSTPARTY,LOCALFOLDER"
# Explicitly black-compatible settings
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

